--- a/css/styles.css
+++ b/css/styles.css
@@ -12,15 +12,15 @@ html {
 :root {
   /* colors */
   /* primary */
-  --primary-100: #e0deff;
-  --primary-200: #c1beff;
-  --primary-300: #a29dff;
-  --primary-400: #837dff;
-  --primary-500: #645cff;
-  --primary-600: #504acc;
-  --primary-700: #3c3799;
-  --primary-800: #282566;
-  --primary-900: #141233;
+  --primary-100: #fffff0;
+  --primary-200: #fefcbf;
+  --primary-300: #faf089;
+  --primary-400: #f6e05e;
+  --primary-500: #ecc94b;
+  --primary-600: #d69e2e;
+  --primary-700: #b7791f;
+  --primary-800: #975a16;
+  --primary-900: #744210;
 
   /* grey */
   --grey-50: #f8fafc;
@@ -311,55 +311,121 @@ ul {
 
 /*
 ====================
-Cocktails API JS
+Banana Lang Js
 ====================
 */
 
-.loading {
-  min-height: 100vh;
+body {
+  height: 100vh;
   display: grid;
-  justify-content: center;
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: var(--grey-50);
-  padding-top: 5rem;
-  z-index: 999;
+  grid-template-rows: auto 1fr auto;
 }
 
-.hide-loading {
-  display: none;
+header {
+  height: 5rem;
+  background: var(--primary-500);
+  display: grid;
+  align-items: center;
 }
 
-/* search-form */
-
-.search-form {
+header h2 {
+  margin: auto;
+  letter-spacing: var(--letterSpacing);
+  text-transform: lowercase;
+  font-style: italic;
   text-align: center;
-  padding-top: 5rem;
-  width: 85vw;
-  max-width: 500px;
+  /* border: 2px solid red; */
+}
+
+main {
+  width: 90vw;
+  max-width: 1170px;
   margin: 0 auto;
+  min-height: 100%;
+  /* border: 2px solid red; */
 }
 
-.search-form h2 {
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  letter-spacing: var(--letterSpacing);
-  font-weight: 600;
+.main-center {
+  display: grid;
+  grid-template-rows: auto auto auto 1fr;
+  /* border: 2px solid brown; */
+  max-width: 700px;
+  min-height: calc(100% - 4rem);
+  margin: 2rem auto;
 }
 
-input {
+textarea {
   width: 100%;
-  font-size: 1.25rem;
-  border-color: transparent;
-  margin-top: 1rem;
-  padding: 0.5rem 1rem;
+  height: 7rem;
+  padding: 0.75rem 0.5rem;
+  border: none;
+  outline: none;
+  border: 0.15rem solid var(--grey-400);
   border-radius: var(--borderRadius);
+  color: var(--grey-500);
+  letter-spacing: var(--letterSpacing);
+  transition: var(--transition);
+  margin-bottom: 1rem;
 }
 
-input::placeholder {
-  text-transform: capitalize;
+textarea:focus {
+  border-color: var(--primary-500);
+}
+textarea::placeholder {
   letter-spacing: var(--letterSpacing);
-  color: var(--grey-400);
+  font-style: italic;
+  color: var(--grey-500);
+}
+
+.btn.translate-btn {
+  display: block;
+  width: fit-content;
+  margin: 0 auto;
+  padding: 1.25rem;
+  font-size: 1.15rem;
+  margin-bottom: 1rem;
+}
+
+.main-center p {
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 0.25rem;
+  letter-spacing: var(--letterSpacing);
+}
+
+.main-center .output-text {
+  width: 100%;
+  min-height: 100%;
+  max-height: 10rem;
+  overflow: auto;
+  padding: 0.75rem 0.5rem;
+  border: 2px solid var(--grey-500);
+  border-radius: var(--borderRadius);
+  color: var(--grey-500);
+  letter-spacing: var(--letterSpacing);
+}
+
+.about {
+  background: var(--primary-500);
+  padding: 0.5rem;
+}
+
+.about-center {
+  /* border: 2px solid red; */
+  margin: 0 auto;
+  display: grid;
+  place-items: center;
+}
+
+.about-center h2 {
+  text-transform: lowercase;
+  font-style: italic;
+  margin-bottom: 0.5rem;
+}
+
+.about-center p {
+  text-align: center;
+  letter-spacing: var(--letterSpacing);
+  margin-bottom: 0;
 }
