--- a/css/styles.css
+++ b/css/styles.css
@@ -365,7 +365,7 @@ textarea {
   color: var(--grey-500);
   letter-spacing: var(--letterSpacing);
   transition: var(--transition);
-  margin-bottom: 1rem;
+  line-height: 1.35;
 }
 
 textarea:focus {
@@ -379,6 +379,8 @@ textarea::placeholder {
 
 .textArea {
   position: relative;
+  margin-bottom: 1rem;
+  /* border: 2px solid orange; */
 }
 
 .refresh {
@@ -387,8 +389,8 @@ textarea::placeholder {
   width: 1.5rem;
   height: 1.5rem;
   position: absolute;
-  bottom: 2rem;
-  right: 1rem;
+  bottom: 1.5rem;
+  right: 2rem;
   display: grid;
   place-items: center;
   color: var(--white);
