--- a/css/styles.css
+++ b/css/styles.css
@@ -437,7 +437,7 @@ textarea::placeholder {
 
 .about {
   background: var(--primary-500);
-  padding-top: 0.5rem;
+  padding-top: 0.25rem;
   padding-bottom: 0.75rem;
 }
 
@@ -449,15 +449,19 @@ textarea::placeholder {
 }
 
 .about-center h2 {
+  font-size: 1.5rem;
   text-transform: lowercase;
   font-style: italic;
-  margin-bottom: 0.5rem;
+  margin-bottom: 0.25rem;
+  letter-spacing: var(--letterSpacing);
 }
 
 .about-center p {
   text-align: center;
   letter-spacing: var(--letterSpacing);
   margin-bottom: 0;
+  font-style: italic;
+  font-size: 0.9rem;
 }
 
 .alert-danger {
