style: added width, max-width & textalign to alert

--- a/css/styles.css
+++ b/css/styles.css
@@ -482,6 +482,9 @@ textarea::placeholder {
   opacity: 0;
   letter-spacing: var(--letterSpacing);
   transform: translateX(-50%);
+  width: fit-content;
+  max-width: 40rem;
+  text-align: center;
 }
 
 .alert.show-alert {
