--- a/css/styles.css
+++ b/css/styles.css
@@ -425,8 +425,8 @@ textarea::placeholder {
 
 .main-center .output-text {
   width: 100%;
-  min-height: 100%;
-  max-height: 10rem;
+  min-height: 5rem;
+  max-height: 100%;
   overflow: auto;
   padding: 0.75rem 0.5rem;
   border: 2px solid var(--grey-500);
