--- a/css/styles.css
+++ b/css/styles.css
@@ -341,16 +341,16 @@ main {
   width: 90vw;
   max-width: 1170px;
   margin: 0 auto;
-  min-height: 100%;
+  /* min-height: 100%; */
   /* border: 2px solid red; */
 }
 
 .main-center {
   display: grid;
   grid-template-rows: auto auto auto 1fr;
-  /* border: 2px solid brown; */
+  border: 2px solid brown;
   max-width: 700px;
-  min-height: calc(100% - 4rem);
+  min-height: calc(100% - 6rem);
   margin: 2rem auto;
 }
 
